k8s/storage/nix-kache/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nix-kache
  labels:
    app.kubernetes.io/name: nix-kache
    app.kubernetes.io/part-of: nix-kache
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
