k8s/storage/nix-kache/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nix-serve
  namespace: nix-kache
  labels:
    app.kubernetes.io/name: nix-serve
    app.kubernetes.io/part-of: nix-kache
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  # No selector; we'll manually define Endpoints
  selector: {}
