k8s/storage/nix-kache/02-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nix-serve
  namespace: nix-kache
subsets:
  - addresses:
      - ip: 10.3.0.13
    ports:
      - port: 5000
